--- a/forside/style.css
+++ b/forside/style.css
@@ -1,6 +1,6 @@
 body{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color:  #fff9e6;
+    background-color:  hsl(57, 34%, 87%);
     margin: 0;
     padding: 0;
     line-height: 1.6;
@@ -12,6 +12,7 @@ body{
 
 #overskrift{
     text-align: center;
+    margin-top: 40px;
 }
 
 /* .underoverskrift2{
@@ -145,43 +146,214 @@ body{
 #regbutton button:hover {
     background-color: #4275e2;
 }
+#invitasjon{
+  z-index: 10;
+}
 
-#flower1{
+/* #flower1{
   position: absolute;
   width: 250px;
   max-width: 100%;
+  top: 50px;
+  right: 20px;
+  opacity: 0.5;
+  z-index: 0;
+} */
+
+/* @media (max-width: 700px) {
+  #flower1 {
+    left: 50%;
+    right: auto;
+    transform: translateX(-50%);
+    opacity: 0.1;
+  }
+}  */
+
+#blueflower{
+  position: absolute;
+  width: 300px;
+  max-width: 100%;
   top: 100px;
+  right: 30px;
+  opacity: 0.8;
+  z-index: 0;
+}
+
+#pinkflower1{
+  position: absolute;
+  width: 300px;
+  max-width: 100%;
+  top: 50px;
+  left: 20px;
+  opacity: 0.8;
+  z-index: 0;
+}
+#pinkflower2{
+  position: absolute;
+  width: 300px;
+  max-width: 100%;
+  bottom: 50px;
   right: 20px;
   opacity: 0.8;
   z-index: 0;
 }
 
+#pinkflower3{
+  position: absolute;
+  width: 300px;
+  max-width: 100%;
+  top: 500px;
+  right: 200px;
+  opacity: 0.8;
+  z-index: 0;
+}
+#whiteflower1{
+  position: absolute;
+  width: 300px;
+  max-width: 100%;
+  top: 500px;
+  right: 10px;
+  opacity: 0.8;
+  z-index: 0;
+}
 
-#leaf1{
+#whiteflower2{
+  position: absolute;
+  width: 300px;
+  max-width: 100%;
+  bottom: 500px;
+  right: 160px;
+  opacity: 0.8;
+  z-index: 0;
+}
+#blueflower1{
+  position: absolute;
+  width: 300px;
+  max-width: 100%;
+  top: 200px;
+  right: 20px;
+  opacity: 0.7;
+  z-index: 0;
+}
+#blueflower2{
+  position: absolute;
+  width: 300px;
+  max-width: 100%;
+  bottom: 200px;
+  left: 20px;
+  opacity: 0.8;
+  z-index: 0;
+}
+
+#orangeflower1{
+  position: absolute;
+  width: 300px;
+  max-width: 100%;
+  top: 100px;
+  right: 400px;
+  opacity: 0.8;
+  z-index: 0;
+}
+
+#orangeflower2{
+  position: absolute;
+  width: 300px;
+  max-width: 100%;
+  bottom: 100px;
+  left: 200px;
+  opacity: 0.8;
+  z-index: 0;
+}
+
+
+
+@media (max-width: 800px){
+  #pinkflower1{
+    width: 115px;
+    top: 350px;
+    left: 5px;
+    z-index: 8;
+  }
+  #pinkflower2{
+    width: 100px;
+    top: 620px;
+    right: 2px;
+    z-index: 8;
+  }
+  #pinkflower3{
+    width: 100px;
+    top: 800px;
+    left: 30px;
+  }
+  #blueflower1{
+    width: 110px;
+    top: 640px;
+    left: 0px;
+    z-index: 7;
+  }
+  #blueflower2{
+    width: 100px;
+    top: 200;
+    left: 15px;
+  }
+  #orangeflower1{
+    width: 100px;
+    top: 300px;
+    right: 15px;
+  }
+  #orangeflower2{
+    width: 100px;
+    top: 200;
+    left: 15px;
+  }
+  #whiteflower1{
+    width: 100px;
+    top: 360px;
+    right: 0px;
+    z-index: 7;
+  }
+  #whiteflower2{
+    width: 100px;
+    top: 200;
+    left: 15px;
+  }
+
+}
+
+
+
+
+
+/* #leaf1{
   position: absolute;
   width: 250px;
   max-width: 100%;
   bottom: 20px;
   left: 20px;
-  opacity: 0.8;
+  opacity: 0.2;
   transition: all 0.5s ease;
   z-index: 1;
-}
+} */
 
-@media (max-width: 1200px) { 
+
+
+/* @media (max-width: 1180px) { 
   #leaf1, #flower1 {
     opacity: 0.8;
     transform: translateX(-100px);
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1180px) {
   #leaf1, #flower1 {
     opacity: 0;
     transform: translateX(-300px); 
     pointer-events: none;
   }
-}
+} */
+
+
+
 
 
 /* @media (max-width: 1200px){
@@ -189,5 +361,4 @@ body{
     opacity: 0;
     transform: translateX(-50px);
     pointer-events: none;
-  }
-} */
+  } */
