--- a/forside/style.css
+++ b/forside/style.css
@@ -133,10 +133,10 @@ body{
 }
 
 #regbutton button {
-  padding: 12px 24px;
+  padding: 10px 15px;
   font-size: 1rem;
   border: none;
-  background-color: #487ff7;
+  background-color: #719cf7;
   color: #000;
   font-weight: bold;
   border-radius: 8px;
