--- a/registrering/registrering.css
+++ b/registrering/registrering.css
@@ -4,11 +4,10 @@
 } */
 
 body{
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color:  hsl(57, 34%, 87%);;
+    font-family:'Glacial Indifference', sans-serif;
+    background-color: hsl(44, 60%, 95%);
     margin: 0;
     padding: 0;
-    line-height: 1.6;
     position: relative;
 }
 
@@ -18,6 +17,7 @@ body{
     margin-top: 40px;
     text-align: center;
     cursor: pointer;
+    font-size: large;
 }
 
 .navlist a, 
@@ -81,13 +81,14 @@ body{
     max-width: 1062px;
     margin: 0 auto;
     padding: 20px;
-    background-color:  hsl(57, 34%, 87%);;
+    background-color: hsl(44, 60%, 95%);
     /* background: #fff9e6; */
     /* border-radius: 10px; */
 }
 
+
 @media (max-width: 1200px){
-.guestreg h2{
+  #underoverskrift{
     text-align: center;
 }
 }
@@ -133,23 +134,26 @@ body{
     margin-top: 15px;
     padding: 10px 20px;
     width: 52%;
-    background: #468FCC;
-    color: white;
+    background-color: #769db6;
+    color: rgb(0, 0, 0);
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 15px;
 }
 
 
 #regflere{
     margin-top: 15px;
     padding: 10px 10px;
-    background: #a79a70;
-    color: white;
+    background-color: rgb(225, 204, 178);
+    color: rgb(0, 0, 0);
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
+
+
 
 #plusbtn{
     width: 20px;
@@ -197,7 +201,8 @@ body{
 }
 @media (max-width: 1200px){
     #guestcontainer{
-        font-size: 20px;
+      font-size: 17px;
+        line-height: 1.6;
     }
 }
 
