--- a/registrering/registrering.css
+++ b/registrering/registrering.css
@@ -51,12 +51,17 @@ body{
 
 @media (max-width: 600px) {
   .navlist {
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 20px;
   }
 }
+#registrering{
+  font-weight: bold;
+  text-decoration: underline 2px;
+  -webkit-text-decoration-line: underline;
+}
 
-.navlist a{
+/* .navlist a{
   position: relative;
 }
 .navlist a::after{
@@ -72,7 +77,7 @@ body{
 
 .navlist a:hover::after{
   width: 100%;
-}
+} */
 #registrering{
   font-weight: bold;
 }
@@ -93,11 +98,11 @@ body{
 }
 }
 
-.regnavn{
+.regnavn, #email{
     display: block;
     margin: 10px 0 5px;
 }
-.regboks{
+.regboks, #email{
     width: 50%;
     padding: 8px;
     border-bottom: 5px;
@@ -117,10 +122,10 @@ body{
 }
 
 @media (max-width: 1200px){
-    #allergiboks, .regboks{
+    #allergiboks, .regboks, #email{
         width: 95%;
     }
-    .regboks{
+    .regboks, #email{
         font-size: 15px;
     }
 }
@@ -170,7 +175,7 @@ body{
     margin-top: 15px;
     padding: 10px 10px;
     background: #b80000;
-    color: white;
+    color: rgb(255, 255, 255);
     border: none;
     border-radius: 5px;
     cursor: pointer;
