--- a/forside/style.css
+++ b/forside/style.css
@@ -6,9 +6,15 @@ body{
     /* line-height: 1.6; */
     position: relative;
     text-align: center;
-
-
+    font-weight: 300;
 }
+
+#invitasjon{
+  width: 90%;
+  text-align: center;
+  margin: 0 auto;
+}
+
 #overskrift{
   text-align: center;
 }
@@ -119,4 +125,3 @@ body{
   border-radius: 8px;
   cursor: pointer;
 }
-
