--- a/confirmation/confirmation.css
+++ b/confirmation/confirmation.css
@@ -3,16 +3,16 @@ body{
     background-color: hsl(44, 60%, 95%);
     margin: 0;
     padding: 0;
-    /* line-height: 1.6; */
     position: relative;
     justify-content: center;
     display: flex;
     align-items: center;
     height: 100vh;
     font-weight: 300;
+    margin: 40px;
 }
 
-button {
+#forsidebtn{
   padding: 10px 15px;
   font-size: 1rem;
   border: none;
@@ -23,4 +23,31 @@ button {
 }
 .container{
     text-align: center;
+}
+
+#registrerbtn{
+  padding: 10px 15px;
+  font-size: 1rem;
+  border: none;
+  background-color: rgb(202, 56, 56);
+  color: #000;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.imgcontainer {
+  max-width: 1100px;
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.imgcontainer img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  z-index: 5;
+  position: relative;
 }
